--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "bootstrap": "^5.3.8",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-icon": "^1.0.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "6"
   },
   "devDependencies": {
