--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "react-dom": "^19.1.1",
     "react-icon": "^1.0.0",
     "react-icons": "^5.5.0",
-    "react-router-dom": "6"
+    "react-router-dom": "^7.9.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.35.0",
